--- a/content/system_desing.tex
+++ b/content/system_desing.tex
@@ -419,12 +419,12 @@ kezelésére képes.
     \centering
     \begin{minipage}{0.45\textwidth}
         \centering
-        \includegraphics[width=\linewidth, keepaspectratio]{figures/sq_dante.jpg}
+        \includegraphics[width=67mm, keepaspectratio]{figures/sq_dante.jpg}
         \caption{Allen \& Heath SQ Dante kártya}\label{fig:sq_dante}
     \end{minipage}\hfill
     \begin{minipage}{0.45\textwidth}
         \centering
-        \includegraphics[width=\linewidth, keepaspectratio]{figures/dt168.jpg}
+        \includegraphics[width=67mm, keepaspectratio]{figures/dt168.jpg}
         \caption{Allen \& Heath DT168 Dante stagebox}\label{fig:dt168}
     \end{minipage}
 \end{figure}
@@ -448,6 +448,14 @@ késleltetési értékek mellett is képes legyen késés nélkül a csatornák 
 produkálni, furcsa zavaró pattogó hangokat hallhatunk, vagy rosszabb esetben hangkimaradás is előfordulhat. Ezért fontos a megfelelő hardveres
 erőforrások biztosítása, és a pontos beállítások elvégzése.
 A példában szereplő rendszer kifogástalanul képes elvégezni a feladatát, és a beállított 1 ms-os késleltetési értéket is képes folyamatosan tartani.
+%----------------------------------------------------------------------------
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=67mm, keepaspectratio]{figures/rednet_pcie.jpg}
+	\caption{Focusrite RedNet PCIe kártya}\label{fig:rednet_pcie}
+\end{figure}
+%----------------------------------------------------------------------------
+
 %----------------------------------------------------------------------------
 % !!! Képernyőfotó a szerverről !!!
 %----------------------------------------------------------------------------
