--- a/thesis.tex
+++ b/thesis.tex
@@ -2,16 +2,16 @@
 % !TeX spellcheck = hu_HU
 % !TeX encoding = UTF-8
 % !TeX program = pdflatex
-%TODO Change language to en_GB (recommended) or en_US for English documents
+% !TeX TXS-program:compile = txs:///python//usr/bin/python3
 \documentclass[11pt,a4paper,oneside]{report}             % Egyoldalas (javasolt)
 %\documentclass[11pt,a4paper,twoside,openright]{report}  % Duplex
-
 \input{include/packages}
-
+%--------------------------------------------------------------------------------------
 \usepackage{float}
 \usepackage{hyperref}
 \usepackage{url}
-
+\usepackage{graphicx}
+\usepackage{pythontex}
 %--------------------------------------------------------------------------------------
 \newcommand{\szerzoVezeteknev}{Székely}
 \newcommand{\szerzoKeresztnev}{Dániel}
